feat: add Email templates and sending
